fixed squished bg img on mobile

--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -51,7 +51,7 @@ a:hover
   width: 100%
   height: 100%
   img
-    width: 100%
+    width: auto
     height: 100%
     z-index: -20
 
@@ -75,9 +75,6 @@ a:hover
     margin-top: 5vh
     @media (max-width: 767px)
       margin-top: 10vh
-
-
-
 
 .profile-pic
   margin: 10vh auto
